<resources>
    <string name="app_name">USTH Weather</string>

    <string name="Mon">Mon</string>
    <string name="Sunny">Sunny \n 24C-31C</string>

    <string name="Tue">Tue</string>
    <string name="Cloud">Cloud \n 20C-27C</string>

    <string name="Wed">Wed</string>
    <string name="Windy">Windy \n 19C-25C</string>

    <string name="Thu">Thu</string>
    <string name="Rain">Rain \n 19C-25C</string>

    <string name="Fri">Fri</string>
    <string name="Thunderstorms">Thunderstorms \n 18C-23C</string>

    <string name="Sat">Sat</string>
    <string name="Snow">Snow \n -5C-0C</string>

    <string name="Sun">Sun</string>
    <string name="Cloudy">Cloudy \n 19C-25C</string>

    <string name="weather">12C\nCloudy</string>
    <string name="location">San Antonio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
